--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <version>12.0.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13-beta-1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
