--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.3</version>
                 <configuration>
-                    <mainClass>com.note.App</mainClass>
+                    <mainClass>com.note.gui.App</mainClass>
                 </configuration>
             </plugin>
 
